--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.2",
+    "cloudinary": "^1.36.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "formidable": "^2.1.1",
     "js-cookie": "^3.0.1",
     "next": "13.0.1",
     "react": "18.2.0",
