--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,14 @@
     "formidable": "^2.1.1",
     "js-cookie": "^3.0.1",
     "next": "13.0.1",
+    "next-compose-plugins": "^2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.11",
     "tailwindcss": "^3.0.23",
     "urql": "^3.0.3"
+  },
+  "resolutions": {
+    "styled-components" : "^5"
   }
 }
